--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,13 @@ footer {
 .cat-card {
   border: 1px solid #ddd;
   text-align: center;
-  height: 250px;
+  height: 280px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+
+  border-radius: 8px;
 }
 
 .cat-info {
