--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ header h1 {
   font-size: 2rem;
   font-weight: bold;
   margin: 0;
-  color: #8b0000; 
+  color:crimson; 
 }
 header h2 {
   font-size: 2rem;
